# AI-ML

./: Churn Analysis Summary.docx  ChurnAnalysis.ipynb  README.md  Regression.ipynb
AGENTIC/: pyproject.toml  requirements.txt
AGENTIC/PART2/: multi.ipynb
AGENTIC/part1/: basic.ipynb  client.py  mathserver.py  react.ipynb  weather.py
GENAI/: pyproject.toml  requirements.txt
GENAI/genai/: intro.ipynb  rwvision.ipynb
agentic_RAG/: eg.ipynb
agentic_chatbot/: first.ipynb
